# PharmacophoreCascade

./: .gitignore  ANALYSIS_REPORT.md  README.md  requirements.txt  virtual_screening_pipeline.mmd
GLP1_top_ligand_analysis/: README.md  pyproject.toml
GLP1_top_ligand_analysis/configs/: study_715_topological.yaml  study_715_topological_lite.yaml  study_ghsr_benchmark.yaml  study_mdm2_benchmark.yaml  study_ntsr1_benchmark.yaml  study_top1000_full_1M_native_no_docking.yaml  study_top1000_full_1M_native_tuned_no_docking.yaml  study_top100_full_1M_native_no_docking.yaml
GLP1_top_ligand_analysis/reports_715_topological/: glp1r_activation_scoring_715_topological_docking_summary.md  glp1r_activation_scoring_715_topological_ligand_qc.md  glp1r_activation_scoring_715_topological_screening_comparison.md
config/: pipeline.yaml
evidence/: aggregate_replicates.py  build_additional_benchmarks.py  build_decoy_replicates.py  build_external_benchmark_dataset.py  export_machine_readable.py  make_benchmark_figure.py  make_docking_artifacts.py  make_pipeline_figure.py  make_revision_figures.py  make_round2_tables.py  make_si_tables.py  make_toc_graphic.py  run.py  run_decoy_replicates.py  run_production_benchmark.py  run_target_benchmark.py  run_topk_docking.py
evidence/configs/: ablation.yaml  (+9 more)
maps/: glp1r_interface.json  pharmacophore_ghsr.json  pharmacophore_glp1r_automated.json  pharmacophore_mdm2.json  pharmacophore_ntsr1.json  pharmacophore_rigorous.json
reproduce/: README.md  reproduce_benchmarks.py
results/: screening_full_1M_topological_hashed_native_scored_top5000.csv  (+3 more)
(+307 files in other folders)
