[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glp1r-state-preference"
version = "0.1.0"
description = "GLP-1R active-vs-inactive ligand state preference workflow"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "pydantic>=2.10",
  "rdkit>=2024.9",
  "scipy>=1.14",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "biopython>=1.84",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
